# isaacsim-galbot-g1-rdt-inference

./: .gitignore  README.md  design_scene.py  interface.py  lang_embed.pt  main.py  precompute_lang_embed.py  pyproject.toml  rdt_ipc.py  rdt_server.py
config/: precompute_lang_embed.yaml  rdt_server.yaml
scripts/: precompute_lang_embed.py  run_main.sh  start_rdt_server.sh
src/isaacsim_inference/: main.py
src/isaacsim_interface/: interface.py
src/isaacsim_interface/robots/: galbot_golf.py
src/isaacsim_interface/scenes/: default.py
src/rdt_inference/: rdt_server.py
