[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isaacsim-galbot-g1-rdt-inference"
version = "0.1.0"
description = "IsaacLab + RDT-1B inference stack for the Galbot One Golf task."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
